change webpack config

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --mode development --open --hot",
-    "build": "webpack --mode production"
+    "start": "webpack serve --env mode=development",
+    "build": "webpack --env mode=production"
   },
   "keywords": [],
   "author": "Tulepov Omirbek",
@@ -21,6 +21,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.1",
     "img-loader": "^3.0.2",
+    "mini-css-extract-plugin": "^1.3.4",
     "node-sass": "^5.0.0",
     "postcss-loader": "^4.1.0",
     "react": "^17.0.1",
